[package]
name = "ovide"
description = "Ovide for OVerlap InDEx"
version = "0.1.0"
authors = ["Pierre Marijon <pierre.marijon@hhu.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio             = "0.32"
csv             = "1"
serde           = "1"

# input output management
niffler	       = "2"

# CLI management
clap           = "3.0.0-beta.1"

# Logging and error management
log 	       = "0.4"
anyhow         = "1.0"
thiserror      = "1.0"
env_logger     = "0.7"

[profile.release]
#debug = true # uncomment for profiling
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false